# tumbller-fc-frames-fastapi

./: .gitignore  README.md  pyproject.toml
dev/: fake_rover.py
fastapi-frames-server/: .env.template  config.py  helpers.py  main.py
fastapi-frames-server/templates/: control_mode.html  fb_control.html  index.html  lr_control.html  rover_selection.html  waiting.html
scripts/: run_dns_frontend.sh  run_fake_rover.sh  run_mini_app.sh  setup.sh
